<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_nav_extension"
            android:title="@string/nav_item_main" />
    </group>

    <group
        android:id="@+id/main_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mainui"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_item_mainui" />
        <item
            android:id="@+id/nav_sidebar"
            android:icon="@drawable/ic_nav_sidebar"
            android:title="@string/nav_item_sidebar" />
        <item
            android:id="@+id/nav_qzone"
            android:icon="@drawable/ic_nav_qzone"
            android:title="@string/nav_item_qzone" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_nav_chat"
            android:title="@string/nav_item_chat" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_nav_group"
            android:title="@string/nav_item_group" />
        <item
            android:id="@+id/nav_other"
            android:icon="@drawable/ic_nav_other"
            android:title="@string/nav_item_other" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_nav_setting"
            android:title="@string/nav_item_setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_nav_info"
            android:title="@string/nav_item_about" />
    </group>

</menu>
