<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/disableView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:cardElevation="2dp">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/enableSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_padding"
                android:checked="true"
                android:text="@string/enable_module"
                android:textSize="16sp" />

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/status_container"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:foregroundGravity="center"
                        android:orientation="vertical"
                        tools:background="@color/darker_green">

                        <ImageView
                            android:id="@+id/status_icon"
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/img_description_check_state"
                            tools:src="@drawable/ic_check_circle" />

                    </FrameLayout>

                    <TextView
                        android:id="@+id/module_active_errors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/module_active"
                        android:textColor="@color/warning"
                        android:textStyle="bold"
                        tools:textColor="@color/darker_green" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <me.zpp0196.qqsimple.activity.item.CardItem
                android:id="@+id/card_device_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/item_card_device" />

            <me.zpp0196.qqsimple.activity.item.CardItem
                android:id="@+id/card_qq_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/item_card_qq" />

            <me.zpp0196.qqsimple.activity.item.CardItem
                android:id="@+id/card_module_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/item_card_module" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>