<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/about_eggs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/about_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@mipmap/ic_launcher"
                    android:drawablePadding="16dp"
                    android:drawableStart="@mipmap/ic_launcher"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/about_readme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_readme"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <View
                android:layout_width="1dp"
                android:layout_height="10dp"
                android:layout_margin="4dp"
                android:background="@color/div" />

            <TextView
                android:id="@+id/about_issues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_issues"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <View
                android:layout_width="1dp"
                android:layout_height="10dp"
                android:layout_margin="4dp"
                android:background="@color/div" />

            <TextView
                android:id="@+id/about_releases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_releases"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_copyright"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    </LinearLayout>

</RelativeLayout>